MatchController implementation and change match constructor